bubba-frontend (1.9.47) claire; urgency=low

  * Fixed set date/time. (Closes #1317) 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 14:37:52 +0200

bubba-frontend (1.9.46) karmic; urgency=low

  * Fixed rename error message. (Closes #1280) 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 14:08:45 +0200

bubba-frontend (1.9.45) claire; urgency=low

  * Disable fw view when wan not configured, (Closes #1312)

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 13:57:43 +0200

bubba-frontend (1.9.44) claire; urgency=low

  * Fixed update of network profile (Closes #1313)

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 12:55:12 +0200

bubba-frontend (1.9.43) claire; urgency=low

  * Fixed small screen issue on login page. 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 11:56:08 +0200

bubba-frontend (1.9.42) karmic; urgency=low

  * Styling on upload, update and help. (Closes #1241, #1263, #1305). 

 -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 11:06:02 +0200

bubba-frontend (1.9.41) claire; urgency=low

  * Fixed easyfind slide switch in wizard. (Closes #1301)

 -- PA Nilsson <pa@excito.com>  Fri, 02 Apr 2010 16:11:41 +0200

bubba-frontend (1.9.40) karmic; urgency=low

  * Easyfind fixes. (Closes #1302, #1292, 1293) 

 -- PA Nilsson <pa@excito.com>  Fri, 02 Apr 2010 15:56:35 +0200

bubba-frontend (1.9.39) claire; urgency=low

  * Numerous fixes,  (Closes #1307, #1309, #1310)

 -- PA Nilsson <pa@excito.com>  Fri, 02 Apr 2010 13:30:13 +0200

bubba-frontend (1.9.38) claire; urgency=low

  * bind "m" to document instead of window (Closes: #1275) 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 01 Apr 2010 18:17:29 +0200

bubba-frontend (1.9.37) claire; urgency=low

  * IE fixes (Closes: #1289, #1290) 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 01 Apr 2010 17:54:47 +0200

bubba-frontend (1.9.36) karmic; urgency=low

  * fix notification of user update and fix issue with lacking ssh after
    update of user. (Closes: #1304, #1205) 
